--- a/package.json
+++ b/package.json
@@ -4,6 +4,9 @@
     "private": true,
     "dependencies": {
         "@apollo/react-hooks": "^0.1.0-beta.11",
+        "@material-ui/core": "^4.2.1",
+        "@material-ui/icons": "^4.2.1",
+        "@material-ui/styles": "^4.2.1",
         "apollo-cache-inmemory": "^1.6.2",
         "apollo-client": "^2.6.3",
         "apollo-link-http": "^1.5.15",
