--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
         "apollo-link-http": "^1.5.15",
         "graphql": "^14.4.2",
         "graphql-tag": "^2.10.1",
+        "mtgsdk": "^0.4.3",
         "react": "^16.8.6",
         "react-dom": "^16.8.6",
         "react-router-dom": "^5.0.1",
