--- a/package.json
+++ b/package.json
@@ -18,11 +18,12 @@
         "react-router-dom": "^5.0.1",
         "react-scripts": "3.0.1",
         "react-select": "^3.0.4",
+        "react-use-auth": "^0.3.0",
         "styled-components": "^4.3.2",
         "uuid": "^3.3.2"
     },
     "scripts": {
-        "start": "react-scripts start",
+        "start": "PORT=8000 react-scripts start",
         "build": "react-scripts build",
         "test": "react-scripts test",
         "eject": "react-scripts eject"
