--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
         "react-router-dom": "^5.0.1",
         "react-scripts": "3.0.1",
         "react-select": "^3.0.4",
+        "react-virtualized": "^9.21.1",
         "styled-components": "^4.3.2",
         "uuid": "^3.3.2"
     },
