--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
         "graphql-tag": "^2.10.1",
         "mtgsdk": "^0.4.3",
         "react": "^16.8.6",
+        "react-copy-to-clipboard": "^5.0.1",
         "react-dom": "^16.8.6",
         "react-router-dom": "^5.0.1",
         "react-scripts": "3.0.1",
