--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
         "apollo-link-context": "^1.0.18",
         "apollo-link-error": "^1.1.11",
         "apollo-link-http": "^1.5.15",
+        "clsx": "^1.0.4",
         "graphql": "^14.4.2",
         "graphql-tag": "^2.10.1",
         "mtgsdk": "^0.4.3",
